// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions initMap Dispatches init map action 1`] = `
Array [
  Object {
    "type": "INIT_MAP",
  },
]
`;

exports[`actions loadSitesBegin Dispatches load sites begin action 1`] = `
Array [
  Object {
    "type": "LOAD_SITES_BEGIN",
  },
]
`;

exports[`actions loadSitesFAILURE Dispatches load sites failure action 1`] = `
Array [
  Object {
    "error": [Error: error occurred],
    "type": "LOAD_SITES_FAILURE",
  },
]
`;

exports[`actions loadSitesSuccess Dispatches load sites success action 1`] = `
Array [
  Object {
    "sites": Array [
      Number {
        "id": "site_1",
      },
      Number {
        "id": "site_2",
      },
      Number {
        "id": "site_3",
      },
    ],
    "type": "LOAD_SITES_SUCCESS",
  },
]
`;
